--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -25,8 +25,10 @@
                 </div>
                 <div class="headline">
                     <img id="tutor-logo" alt="OpenStax Tutor beta logo" src="/images/openstax-tutor/tutor-logo.svg">
-                    <h1>{model.frontier.headline}</h1>
-                    <div class="blurb">{model.frontier.subhead}</div>
+                    <div class="headline-text">
+                        <h1>{model.frontier.headline}</h1>
+                        <div class="blurb">{model.frontier.subhead}</div>
+                    </div>
                     <a href="{model.frontier.learnMore.href}" class="btn primary">
                         {model.frontier.learnMore.text}
                     </a>
