Fix pulse button text
Use pop_up_text from CMS for pulse button text

--- a/src/app/pages/openstax-tutor/pulsing-dot/pulsing-dot.scss
+++ b/src/app/pages/openstax-tutor/pulsing-dot/pulsing-dot.scss
@@ -51,7 +51,7 @@ $pulse-color: #f5d01b;
         color: text-color(helper);
         display: block;
         left: - $normal-margin;
-        padding: $normal-margin;
+        padding: 0 $normal-margin;
         position: absolute;
         top: 50%;
         transform: translate(-100%, -50%);
