--- a/src/app/pages/openstax-tutor/pulsing-dot/pulsing-dot.html
+++ b/src/app/pages/openstax-tutor/pulsing-dot/pulsing-dot.html
@@ -1,8 +1,5 @@
 <template args="model">
   <div class="dot {model.stopPulsing ? 'stopped' : ''}"></div>
   <div class="pulse">!</div>
-  <div class="popup">
-      OpenStax Tutor is not available for high school or international
-      schools.
-  </div>
+  <div class="popup" data-html="html" skip="true"></div>
 </template>
