--- a/src/app/components/form-radiogroup/form-radiogroup.html
+++ b/src/app/components/form-radiogroup/form-radiogroup.html
@@ -1,8 +1,9 @@
 <template args="model">
-    <label class="field-label">{model.label}</label>
+    <label if="model.label" class="field-label">{model.label}</label>
+    <label if="model.longLabel" class="field-long-label">{model.longLabel}</label>
     <div class="invalid-message">{model.validationMessage(model.name)}</div>
     <div class="{model.classes ? model.classes.join(' ') : ''}">
-        <div each="item in model.options" class="control-group">
+        <div each="item in model.options" class="radio-control-group">
             <label>
                 <input type="radio"
                     name="{model.name}"
