--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -3,6 +3,7 @@
         <h1>{model.introHeading}</h1>
         <span data-html="introDescription" skip="true"></span>
     </div>
+    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     <div class="text-content">
         <plug-in data-id="selectedRole" skip="true"></plug-in>
     </div>
