--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -1,7 +1,9 @@
 <template args="model">
     <div if="model.introHeading" class="hero">
         <h1>{model.introHeading}</h1>
-        <span data-html="introDescription" skip="true"></span>
+        <div class="text-content">
+            <div data-html="introDescription" skip="true"></div>
+        </div>
     </div>
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
     <div class="text-content">
