--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -1,6 +1,6 @@
 <template args="model">
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
-    <form accept-charset="UTF-8" class="form" target="form-response"
+    <form accept-charset="UTF-8" class="form {model.hasBeenSubmitted ? 'submitted' : ''}" target="form-response"
      action="https://{model.salesforce.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
         <div>
             <input name="utf8" type="hidden" value="✓">
@@ -25,7 +25,7 @@
                 <div each="subject in model.subjects">
                     <label class="field-label">{subject}</label>
                     <div class="{model.booksBySubject(subject).length > 1 ? 'two-columns' : ''}">
-                        <div each="book in model.booksBySubject(subject)" class="control-group">
+                        <div each="book in model.booksBySubject(subject)" class="radio-control-group">
                             <label><input type="radio" name="00NU00000053nzR" required>{book.text}</label>
                         </div>
                     </div>
@@ -36,9 +36,7 @@
                 </div>
                 <br>
                 <plug-in data-id="adoptionStatus" skip="true"></plug-in>
-                <br>
                 <plug-in data-id="howMany" skip="true"></plug-in>
-                <br>
                 <div class="flexrow">
                     <button type="button" class="btn secondary back">Back</button>
                     <button type="button" class="btn primary next">Next</button>
@@ -49,17 +47,14 @@
             >
                 <h2>Tell use about the technology you use.</h2>
                 <div class="hint">Check all that apply</div>
-                <br>
                 <div class="two-columns">
-                    <div each="partner in model.partnerResourceOptions" class="control-group">
+                    <div each="partner in model.partnerResourceOptions" class="checkbox-control-group">
                         <label><input type="checkbox" name="00NU0000005VmTu" value={partner.value}>{partner.label}</label>
                     </div>
                 </div>
-                <br>
                 <div  class="{model.showOtherBlank ? '' : 'hidden'}">
                     <plug-in data-id="otherPartner" skip="true"></plug-in>
                 </div>
-                <br>
                 <div class="flexrow">
                     <button type="button" class="btn secondary back">Back</button>
                     <button type="submit" class="btn primary">Submit</button>
