fix sourcemaps (JavaScript, CSS, and HTML templates) (#1003)
* :bug: fix JavaScript sourcemaps

* :bug: fix CSS sourcemaps (HACK)

This runs `node-sass` directly rather than `gulp-sass`. It should be switched back to `gulp-sass`

* :bug: fix HTML sourcemaps

* Merge branch 'master' into fix-sourcemaps

* fix PR review issues

* Fix build for dev

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -1,5 +1,5 @@
 @import 'mixins/triangle';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 .page-header .nav {
     box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(os-color(gray), 0.1);
