--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -1,6 +1,6 @@
 @import 'mixins/triangle';
 @import 'mixins/coming-soon';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $special-breakpoint: 54rem;
 
