--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 // Just for math book
 $tablet-book-size: 16.5rem;
