--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -1,5 +1,5 @@
 @import 'mixins/responsive';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $breakpoint-1: 908px;
 $breakpoint-2: 761px;
