--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -1,7 +1,7 @@
 @import 'mixins/responsive';
 @import 'mixins/triangle';
 @import 'mixins/halo';
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $breakpoint-1: 908px;
 $breakpoint-2: 806px;
