Fix up other forms

--- a/src/app/pages/bulk-order/bulk-order.scss
+++ b/src/app/pages/bulk-order/bulk-order.scss
@@ -14,4 +14,14 @@
     .unpadded {
         padding: 0;
     }
+
+    .col {
+        min-width: 30rem;
+
+        > label {
+            display: block;
+            height: $form-element-height;
+            margin-bottom: $form-element-height;
+        }
+    }
 }
