--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -1,4 +1,5 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 .interest-form {
     .top-of-form {
