--- a/src/app/pages/openstax-tutor/section-navigator/section-navigator.scss
+++ b/src/app/pages/openstax-tutor/section-navigator/section-navigator.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 $width: 3.8rem;
 $small-dot: 0.6rem;
