--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 // scss-lint:disable IdSelector
 @import 'fonts';
-@import '../../node_modules/pattern-library/core/pattern-library/elements/document';
-@import '../../node_modules/pattern-library/core/pattern-library/elements/headings';
+@import 'pattern-library/core/pattern-library/elements/document';
+@import 'pattern-library/core/pattern-library/elements/headings';
 
 html {
     font-family: 'Neue Helvetica W01', sans-serif;
