--- a/src/app/pages/adoption-confirmation/header-1.scss
+++ b/src/app/pages/adoption-confirmation/header-1.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/pattern-library/core/pattern-library/headers';
+@import 'pattern-library/core/pattern-library/headers';
 
 .header-1 {
     @include set-font(body-large);
