--- a/src/app/pages/bulk-order/bulk-order.html
+++ b/src/app/pages/bulk-order/bulk-order.html
@@ -3,7 +3,7 @@
         If you are ordering fewer than 25 books, place your order via our
         <a href="{model.amazonUrl}">Amazon.com storefront</a>.
     </div>
-    <form action="{`${model.origin}/api/mail/send_mail/`}" class="form" method="post">
+    <form action="{`${model.origin}/api/mail/send_mail/`}" method="post">
         <input type="hidden" name="csrfmiddlewaretoken" value="{model.csrfToken}" />
         <input name="message_body" type="hidden" value="{model.messageBody}" />
         <input name="subject" type="hidden" value="Bulk Order" />
@@ -12,37 +12,37 @@
                 <div class="col">
                     <label>
                         Organization Name
-                        <span class="invalid-message">{model.validationMessage('organization')}</span>
                         <input name="organization" type="text" required>
+                        <span class="invalid-message">{model.validationMessage('organization')}</span>
                     </label>
                     <label>Organization type
-                        <span class="invalid-message">{model.validationMessage('organization_type')}</span>
                         <div skip="true"></div>
                         <select name="organization_type" required>
                             <option each="option in model.orgTypeOptions">{option}</option>
                         </select>
+                        <span class="invalid-message">{model.validationMessage('organization_type')}</span>
                     </label>
                     <label>
                         Your name
-                        <span class="invalid-message">{model.validationMessage('from_name')}</span>
                         <input name="from_name" type="text" required>
+                        <span class="invalid-message">{model.validationMessage('from_name')}</span>
                     </label>
                 </div>
                 <div class="col">
                     <label>
                         Phone number
-                        <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
+                        <span class="invalid-message">{model.validationMessage('phone')}</span>
                     </label>
                     <label>
                         Email address
-                        <span class="invalid-message">{model.validationMessage('from_address')}</span>
                         <input name="from_address" type="email" required>
+                        <span class="invalid-message">{model.validationMessage('from_address')}</span>
                     </label>
                     <label>
                         Country
-                        <span class="invalid-message">{model.validationMessage('country')}</span>
                         <input name="country" type="text" required>
+                        <span class="invalid-message">{model.validationMessage('country')}</span>
                     </label>
                 </div>
             </div>
