--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -16,26 +16,26 @@
                     <input type="hidden" name="external" value="1">
                     <label>
                         What is your question about?
-                        <span class="invalid-message">{model.validationMessage('subject')}</span>
                         <div skip="true" tabindex="0"></div>
                         <select name="subject">
                             <option each="subject in model.subjects" value="{subject}">{subject}</option>
                         </select>
+                        <span class="invalid-message">{model.validationMessage('subject')}</span>
                     </label>
                     <label>
                         Your Name
-                        <span class="invalid-message">{model.validationMessage('name')}</span>
                         <input name="name" type="text" size="20" required>
+                        <span class="invalid-message">{model.validationMessage('name')}</span>
                     </label>
                     <label>
                         Your Email Address
-                        <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" type="email" required>
+                        <span class="invalid-message">{model.validationMessage('email')}</span>
                     </label>
-                    <label>
+                    <label class="auto-height">
                         Your Message
-                        <span class="invalid-message">{model.validationMessage('description')}</span>
                         <textarea cols="50" name="description" rows="6" required skip="true"></textarea>
+                        <span class="invalid-message">{model.validationMessage('description')}</span>
                     </label>
                     <input type="submit" value="Send" class="btn btn-orange">
                 </form>
