--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -5,7 +5,7 @@
              OpenStax is based at Rice, but your donation will go directly to OpenStax. Once your payment
              is submitted, you will receive payment confirmation and a gift receipt from Rice University.`}
         </div>
-        <form class="form-horizontal" role="form" method="post" action="{model.touchnet().url}">
+        <form method="post" action="{model.touchnet().url}">
             <div class="boxed">
                 <div class="testing-only" if="model.useTestingSite">
                     <label>
@@ -30,64 +30,60 @@
                     <div class="col">
                         <label>
                             Title
-                            <span class="invalid-message">{model.validationMessage('Title')}</span>
                             <input type="text" name="Title" class="form-control"
                             placeholder="Mr./Mrs./Dr./Ms./..."
                              />
+                             <span class="invalid-message">{model.validationMessage('Title')}</span>
                         </label>
                         <label>
                             First Name
-                            <span class="invalid-message">{model.validationMessage('First_Name')}</span>
                             <input type="text" name="First_Name" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('First_Name')}</span>
                         </label>
                         <label>
                             Last Name
-                            <span class="invalid-message">{model.validationMessage('Last_Name')}</span>
                             <input type="text" name="Last_Name" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('Last_Name')}</span>
                         </label>
                         <label>
                             Suffix
-                            <span class="invalid-message">{model.validationMessage('Suffix')}</span>
                             <input type="text" name="Suffix" class="form-control">
+                            <span class="invalid-message">{model.validationMessage('Suffix')}</span>
                         </label>
                         <label>
                             E-Mail
-                            <span class="invalid-message">{model.validationMessage('Email')}</span>
                             <input type="email" name="Email" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('Email')}</span>
                         </label>
                         <label>
                             Phone
-                            <span class="invalid-message">{model.validationMessage('Phone')}</span>
                             <input type="text" name="Phone" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('Phone')}</span>
                         </label>
                         <label>
                             Phone Type
-                            <span class="invalid-message">{model.validationMessage('Phone_Type')}</span>
                             <input type="text" name="Phone_Type" class="form-control"
                             placeholder="Work/Home/Cell/..." required />
+                            <span class="invalid-message">{model.validationMessage('Phone_Type')}</span>
                         </label>
                     </div>
                     <div class="col">
-                        <label>
+                        <label class="two-fields">
                             Address
-                            <span class="invalid-message">{model.validationMessage('Mailing_Address')}</span>
                             <input type="text" name="Mailing_Address" class="form-control" required />
-                        </label>
-
-                        <label>
-                            <span class="invalid-message">{model.validationMessage('Mailing_Address2')}</span>
+                            <span class="invalid-message">{model.validationMessage('Mailing_Address')}</span>
                             <input type="text" name="Mailing_Address2" class="form-control" />
                         </label>
 
+
                         <label>
                             City
-                            <span class="invalid-message">{model.validationMessage('Mailing_City')}</span>
                             <input type="text" name="Mailing_City" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('Mailing_City')}</span>
                         </label>
 
                         <label>
                             State
-                            <span class="invalid-message">{model.validationMessage('Mailing_State')}</span>
                             <div skip="true"></div>
                             <select name="Mailing_State" class="form-control" required>
                                 <option value="--">Not Applicable</option>
@@ -165,16 +161,16 @@
                                 <option value="SK">Saskatchewan</option>
                                 <option value="YT">Yukon Territory</option>
                             </select>
+                            <span class="invalid-message">{model.validationMessage('Mailing_State')}</span>
                         </label>
                         <label>
                             Zip Code
-                            <span class="invalid-message">{model.validationMessage('Mailing_Zip')}</span>
                             <input type="text" name="Mailing_Zip" class="form-control" required />
+                            <span class="invalid-message">{model.validationMessage('Mailing_Zip')}</span>
                         </label>
 
                         <label>
                             Country
-                            <span class="invalid-message">{model.validationMessage('Mailing_Country')}</span>
                             <div skip="true"></div>
                             <select name="Mailing_Country" class="form-control" required />
                                 <option value="US">United States</option>
@@ -423,12 +419,13 @@
                                 <option value="ZM">Zambia</option>
                                 <option value="ZW">Zimbabwe</option>
                             </select>
+                            <span class="invalid-message">{model.validationMessage('Mailing_Country')}</span>
                         </label>
                         <label>
                             Donation Amount
-                            <span class="invalid-message">{model.validationMessage('AMT')}</span>
                             <input name="AMT" type="number" min=5 value="{model.selectedAmount}" required
                             autofocus="{model.selectedAmount == '?' ? '' : null}"/>
+                            <span class="invalid-message">{model.validationMessage('AMT')}</span>
                         </label>
                         <p>You will have the option to set up a recurring gift with your donation amount.</p>
                         <button type="submit" class="btn btn-orange">Continue</button>
