Remove local support pages
Devops will route /support to https://openstax.secure.force.com/help

--- a/src/app/components/shell/header/upper-menu/upper-menu.html
+++ b/src/app/components/shell/header/upper-menu/upper-menu.html
@@ -4,7 +4,7 @@
         <li class="nav-menu-item"><a href="/foundation" role="menuitem">Supporters</a></li>
         <li if="model.showBlog" class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>
         <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
-        <li class="nav-menu-item"><a href="/support" role="menuitem">Help</a></li>
+        <li class="nav-menu-item"><a href="https://openstax.secure.force.com/help" role="menuitem">Help</a></li>
     </ul>
     <span class="logo-wrapper">
         <a class="logo rice-logo" href="http://www.rice.edu" role="menuitem">
