--- a/src/app/pages/openstax-tutor/openstax-tutor.html
+++ b/src/app/pages/openstax-tutor/openstax-tutor.html
@@ -23,17 +23,19 @@
                     <div>{model.access.text}</div>
                     <a href="{model.access.url}" class="btn small">{model.access.label}</a>
                 </div>
-                <div class="headline">
-                    <img id="tutor-logo" alt="OpenStax Tutor beta logo" src="/images/openstax-tutor/tutor-logo.svg">
-                    <div class="headline-text">
-                        <h1>{model.frontier.headline}</h1>
-                        <div class="blurb">{model.frontier.subhead}</div>
+                <div class="headline-and-popup">
+                    <div class="headline">
+                        <img id="tutor-logo" alt="OpenStax Tutor beta logo" src="/images/openstax-tutor/tutor-logo.svg">
+                        <div class="headline-text">
+                            <h1>{model.frontier.headline}</h1>
+                            <div class="blurb">{model.frontier.subhead}</div>
+                        </div>
+                        <a href="{model.frontier.learnMore.href}" class="btn primary">
+                            {model.frontier.learnMore.text}
+                        </a>
                     </div>
-                    <a href="{model.frontier.learnMore.href}" class="btn primary">
-                        {model.frontier.learnMore.text}
-                    </a>
+                    <div class="popup-text text-content {model.frontier.popupHidden}" data-html="frontier.description" skip="true"></div>
                 </div>
-                <div class="popup-text text-content {model.frontier.popupHidden}" data-html="frontier.description" skip="true"></div>
             </div>
         </section>
         <section id="how-it-works">
@@ -106,7 +108,7 @@
                         {model.featureMatrix.resourceFinePrint}
                     </div>
                 </div>
-                <div class="cell text-content">
+                <div class="cell">
                     <h1 class="big-screen">{model.featureMatrix.headline}</h1>
                     <div class="description" data-html="featureMatrix.description" skip="true"></div>
                     <div class="box">
