--- a/src/app/pages/openstax-tutor/openstax-tutor.scss
+++ b/src/app/pages/openstax-tutor/openstax-tutor.scss
@@ -502,7 +502,7 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             height: auto;
-            margin: 3.5rem auto -12%;
+            margin: 3.5rem auto -8%;
             padding: 1.5% 18.6% 15.6% 13%;
             pointer-events: none;
             position: relative;
@@ -551,6 +551,16 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
             }
         }
 
+        .video-description {
+            display: flex;
+            justify-content: center;
+
+            .content {
+                display: inline-block;
+                max-width: 70%; // Keeps it out of the trees
+                text-align: center;
+            }
+        }
 
         .thumbnails {
             display: inline-flex;
@@ -568,10 +578,10 @@ $hover-shadow: 0.8rem 0.8rem 2rem 0 rgba(0, 0, 0, 0.12);
                 border-radius: 0.4rem;
                 cursor: pointer;
                 display: flex;
+                font-weight: bold;
                 height: 100%;
                 justify-content: center;
                 margin: 0 $normal-margin;
-                min-width: 13rem;
                 padding: $normal-margin;
                 width: 18rem;
 
