Stop breaking form items in columns

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -38,6 +38,7 @@ form {
 
     .control-group,
     .radio-control-group {
+        break-inside: avoid;
 
         > label {
             align-items: center;
