Let form labels be taller than one line

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -55,7 +55,7 @@ form {
         color: text-color(normal);
         display: flex;
         font-weight: bold;
-        height: 2rem;
+        min-height: 2rem;
     }
 
     fieldset {
