Highlight invalid checkboxes/radio buttons

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -187,6 +187,14 @@ form {
                 }
             }
         }
+
+        [type="checkbox"],
+        [type="radio"] {
+            &:invalid {
+                border: thin solid ui-color(error-border);
+                box-shadow: 0.1rem 0.1rem 0.2rem 0.2rem ui-color(error-border);
+            }
+        }
     }
 
     textarea {
