--- a/src/app/pages/adoption/teacher-form/teacher-form.html
+++ b/src/app/pages/adoption/teacher-form/teacher-form.html
@@ -30,7 +30,7 @@
                     </div>
                     <br>
                 </div>
-                <div class="invalid-message">{model.validationMessage('00NU00000053nzR')}</div>
+                <div class="offset-up invalid-message">{model.validationMessage('00NU00000053nzR')}</div>
                 <div class="hint">
                     Don't see your book? Fill out our <a href="/interest">interest form</a>.
                 </div>
