--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -4,6 +4,14 @@
 
 $special-breakpoint: 54rem;
 
+@mixin menu-is-fixed {
+    @include wider-than($tablet-max) {
+        @media (min-height: 40em) {
+            @content;
+        }
+    }
+}
+
 .details-page {
     position: relative;
 
@@ -147,7 +155,7 @@ $special-breakpoint: 54rem;
                 width: 25rem;
             }
 
-            @include wider-than($tablet-max) {
+            @include menu-is-fixed {
                 width: 25rem;
             }
 
@@ -169,7 +177,7 @@ $special-breakpoint: 54rem;
             margin-bottom: 3rem;
             order: 2;
 
-            @include wider-than($tablet-max) {
+            @include menu-is-fixed {
                 left: 50%;
                 margin-bottom: 0;
                 max-width: 120rem;
@@ -227,15 +235,15 @@ $special-breakpoint: 54rem;
 
         .details {
             order: 3;
+            padding-right: 26.5rem;
 
             @include width-between($phone-max, $tablet-max) {
                 flex: 1 100%;
             }
 
-            @include wider-than($tablet-max) {
+            @include menu-is-fixed {
                 flex: 1 0;
                 order: 2;
-                padding: 0 26.5rem 0 0;
             }
         }
 
